# currency

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
src/: celery.sh  celery_beat.sh  db.sqlite3  pyproject.toml
src/application/: admin.py  models.py  tasks.py  urls.py  views.py
src/application/data/: parsing.ipynb  parsing.py
src/application/management/commands/: parsing.py
src/application/migrations/: 0001_initial.py  0002_alter_exchangeagency_name.py  0003_alter_currencyrate_buy_rate_and_more.py
src/application/templates/: base.html
src/application/templates/application/: agency_detail.html  agency_rates.html  currency_rate_confirm_delete.html  currency_rate_form.html
src/currency/: celery.py  settings.py  urls.py
src/data/: parsing.ipynb
src/templates/: base.html
