[tool.poetry]
name = "currency"
version = "0.1.0"
description = ""
authors = ["sadvakasov.s. <gold_sancho@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"
django-celery-beat = "^2.7.0"
django-celery-results = "^2.5.1"
celery = "^5.4.0"
redis = "^5.2.1"
django-redis = "^5.4.0"
beautifulsoup4 = "^4.13.3"
selenium = "^4.29.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
